test: add some unit tests to the screens